Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84349

QDateTimeParser wrongly accepts a sign in a month field MM

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.0.0
    • Core: Date/Time
    • None
    • Linux/X11
    • 3
    • 92a9a18b5d95b7d3d3fc2d3bb75bea58bd5c6878

      (Probably cross-platform and affects older versions, too; just tested with dev on Linux.)
      As noted on an overhaul of ASN.1 datetime parsing, QDateTime::fromString(QString("9922+221102233Z"), QString("yyyyMMddHHmmsst")) wrongly accepts a sign in the month field.

        For Gerrit Dashboard: QTBUG-84349
        # Subject Branch Project Status CR V

            andreasbuhr Andreas Buhr
            Eddy Edward Welbourne
            Maurice Kalinowski Maurice Kalinowski
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes